--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".services.BluetoothLeService" android:enabled="true" />
+        <service android:name=".service.BluetoothLeService" android:enabled="true" />
     </application>
 
 </manifest>
