--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.duanhong169:colorpicker:1.1.6'
+    implementation 'cn.aigestudio.wheelpicker:WheelPicker:1.1.3'
 }
