Сервисы переписаны под LifecycleService. Вместо BroadcastReceiver используется iveData

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter>
         </activity>
         <service android:name=".service.BluetoothLeService" android:enabled="true" />
+        <service android:name=".service.BluetoothLeScanService" android:enabled="true" />
     </application>
 
 </manifest>
