Использованы синглтоны для сервисов. Применены сопрограммы

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".service.BluetoothLeService" android:enabled="true" />
-        <service android:name=".service.BluetoothLeScanService" android:enabled="true" />
+        <service android:name=".service.BtLeService" android:enabled="true" />
+        <service android:name=".service.BtLeScanService" android:enabled="true" />
     </application>
 
 </manifest>
